# Clause-N-Effect

./: .gitignore  FolderContents.txt  LICENSE  README.md  agent_engine.py  app.py  cleaned_transcript.md  cleaned_transcript_2.md  cleaned_transcript_mailchain_tanisha.md  evaluator.py  ingest.py  logger.py  mail_indexer.py  output 6_28_0319.md  output.md  parser.py  pyproject.toml  requirements.txt
data/: audit_responses.json
data/archive/notes/: baseline_run_1.txt
faiss_legal_db/: index.faiss  index.pkl
src/agents/: graph.py  state.py
src/prompts/: system_prompts.py
src/tools/: retriever.py  search.py
src/utils/: text_crusher.py
