[project]
name = "clause-n-effect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "llama-parse>=0.6.94",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
]
